<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">
<RelativeLayout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:id="@+id/profileLayout"
    android:background="@drawable/gradiant_color"
    tools:context="androidCourse.technion.quickthumbs.personalArea.ProfileActivity">

    <ImageView
        android:id="@+id/achievementBadge"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:layout_centerHorizontal="true"
        android:contentDescription="@string/AchievementBadge"
        app:srcCompat="@drawable/placeholder" />

    <TextView
        android:id="@+id/Accuracy"
        style="@style/BlackTextHeader"
        android:layout_below="@id/achievementBadge"
        android:layout_marginTop="5dp"
        android:layout_marginStart="15dp"
        android:layout_marginLeft="15dp"
        android:textColor="@color/primaryTextColor"
        android:text="@string/Accuracy"/>

    <TextView
        android:id="@+id/AccuracyValue"
        style="@style/BlackTextHeader"
        android:textColor="@color/primaryTextColor"
        android:layout_toRightOf="@id/Accuracy"
        android:layout_toEndOf="@id/Accuracy"
        android:layout_below="@id/achievementBadge"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="5dp"
        android:layout_marginStart="5dp"
        android:text="@string/emptyText" />

    <TextView
        android:id="@+id/WPM"
        style="@style/BlackTextHeader"
        android:layout_below="@id/Accuracy"
        android:layout_marginTop="5dp"
        android:layout_marginStart="15dp"
        android:textColor="@color/primaryTextColor"
        android:layout_marginLeft="15dp"
        android:text="@string/WPM"/>

    <TextView
        android:id="@+id/WPMValue"
        style="@style/BlackTextHeader"
        android:layout_below="@id/AccuracyValue"
        android:layout_toRightOf="@id/WPM"
        android:layout_toEndOf="@id/WPM"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="5dp"
        android:layout_marginStart="5dp"
        android:textColor="@color/primaryTextColor"
        android:text="@string/emptyText" />

    <TextView
        android:id="@+id/CPM"
        style="@style/BlackTextHeader"
        android:layout_below="@id/WPM"
        android:layout_marginTop="5dp"
        android:layout_marginStart="15dp"
        android:layout_marginLeft="15dp"
        android:textColor="@color/primaryTextColor"
        android:text="@string/CPM"/>

    <TextView
        android:id="@+id/CPMValue"
        style="@style/BlackTextHeader"
        android:layout_below="@id/WPMValue"
        android:layout_toRightOf="@id/CPM"
        android:layout_toEndOf="@id/CPM"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="5dp"
        android:layout_marginStart="5dp"
        android:textColor="@color/primaryTextColor"
        android:text="@string/emptyText" />

    <TextView
        android:id="@+id/Score"
        style="@style/BlackTextHeader"
        android:layout_below="@id/CPM"
        android:layout_marginTop="5dp"
        android:layout_marginStart="15dp"
        android:textColor="@color/primaryTextColor"
        android:layout_marginLeft="15dp"
        android:text="@string/Score" />

    <TextView
        android:id="@+id/ScoreValue"
        style="@style/BlackTextHeader"
        android:layout_below="@id/CPMValue"
        android:layout_toRightOf="@id/Score"
        android:layout_toEndOf="@id/Score"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="5dp"
        android:layout_marginStart="5dp"
        android:text="@string/emptyText"
        android:textColor="@color/primaryTextColor"
        />

    <Button
        android:id="@+id/logOutButton"
        style="@style/SecondaryColorRoundedButton"
        android:layout_below="@id/Score"
        android:layout_marginTop="10dp"
        android:layout_centerHorizontal="true"
        android:text="@string/LogOut" />

    <com.facebook.login.widget.LoginButton
        android:id="@+id/facebook_log_out_button"
        android:layout_width="wrap_content"
        android:layout_below="@id/Score"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_gravity="start"
        android:layout_centerHorizontal="true"/>
</RelativeLayout>
</ScrollView>